--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,12 @@
                 "libraryName": "antd",
                 // "style":"css"
             }
+        ],
+        [
+            "styled-components",
+            {
+                "ssr": true
+            }
         ]
     ]
 }
