--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "github-markdown-css": "^3.0.1",
     "ioredis": "^4.9.0",
     "koa": "^2.7.0",
     "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
     "koa-session": "^5.10.1",
     "lru-cache": "^5.1.1",
+    "markdown-it": "^10.0.0",
     "moment": "^2.24.0",
     "next": "^8.0.3",
     "react": "^16.8.5",
