--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "antd": "^3.15.2",
+    "atob": "^2.1.2",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-styled-components": "^1.10.0",
@@ -23,6 +24,7 @@
     "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
     "koa-session": "^5.10.1",
+    "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
     "markdown-it": "^10.0.0",
     "moment": "^2.24.0",
