--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "cross-env NODE_ENV=production node server.js",
+    "export": "next export",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-css": "^1.0.1",
     "antd": "^3.15.2",
     "atob": "^2.1.2",
@@ -36,5 +39,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0"
+  },
+  "devDependencies": {
+    "cross-env": "^6.0.3"
   }
 }
